# r4a_tasks

./: README.md
complex_communication/: CMakeLists.txt  package.xml
complex_communication/launch/: complex.launch
complex_communication/src/: player_1.cpp  player_2.cpp  server.cpp
complex_communication/srv/: Move.srv
complex_communication_action/: CMakeLists.txt  package.xml
complex_communication_action/action/: Board.action
complex_communication_action/include/: player.h  server.h
complex_communication_action/launch/: complex.launch
complex_communication_action/msg/: Terminate.msg
complex_communication_action/src/: player.cpp  player_1.cpp  player_2.cpp  server.cpp
complex_communication_msg/: CMakeLists.txt  package.xml
complex_communication_msg/include/: player.h  server.h
complex_communication_msg/launch/: complex.launch
complex_communication_msg/msg/: Board.msg
complex_communication_msg/src/: player.cpp  player_1.cpp  player_2.cpp  server.cpp  server_node.cpp
learning_tf/: CMakeLists.txt  package.xml
learning_tf/include/learning_tf/: turtle_tf_broadcaster.h  turtle_tf_listener.h
learning_tf/launch/: start_demo.launch
learning_tf/src/: turtle_tf_broadcaster.cpp  turtle_tf_listener.cpp
learning_tf/src/nodes/: frame_tf_broadcaster_node.cpp  logo.cpp  turtle_tf_broadcaster_node.cpp  turtle_tf_listener_node.cpp
obst_avoid_robot/: CMakeLists.txt  package.xml
obst_avoid_robot/include/obst_avoid_robot/: avoid_obstacles.h  robot_tf_listener.h
obst_avoid_robot/launch/: avoid_obst.launch
obst_avoid_robot/src/: avoid_obstacles.cpp  robot_tf_listener.cpp
obst_avoid_robot/src/nodes/: avoid_obstacles_node.cpp  bounding_box.cpp  robot_tf_listener_node.cpp
param_communication/: CMakeLists.txt  package.xml
param_communication/cfg/: params.cfg  static_params.yaml
param_communication/include/param_communication/: manipulator.h  streamer.h
param_communication/launch/: params.launch
param_communication/src/: manipulator.cpp  streamer.cpp
param_communication/src/nodes/: manipulator_node.cpp  streamer_node.cpp
simple_communication/: CMakeLists.txt  package.xml
simple_communication/launch/: simple.launch
simple_communication/msg/: Num.msg
simple_communication/src/: manipulator.cpp  streamer.cpp
simple_robot/: CMakeLists.txt  package.xml
simple_robot/include/: data_fusion.h  robot_pose_server.h  thermal_sensor.h  victim_announce.h
simple_robot/launch/: robot.launch
simple_robot/src/: data_fusion.cpp  robot_pose_server.cpp  thermal_sensor.cpp  victim_announce.cpp
simple_robot_msgs/: CMakeLists.txt  package.xml
simple_robot_msgs/action/: GetRobotPose.action
simple_robot_msgs/msg/: TemperatureReading.msg  VictimFound.msg
usb_cam_input/: CMakeLists.txt  package.xml
usb_cam_input/include/usb_cam_input/: get_input.h
usb_cam_input/launch/: get_input.launch  get_input_depth.launch
usb_cam_input/src/: get_input.cpp
usb_cam_input/src/nodes/: get_input_node.cpp
using_markers/: CMakeLists.txt  package.xml
using_opencv/: CMakeLists.txt  package.xml
using_opencv/src/: depth_edge_detector.cpp  greyscale.cpp  image_converter.cpp  rgb_edge_detector.cpp
