<?xml version="1.0"?>
<package format="2">
  <name>obst_avoid_robot</name>
  <version>0.1.0</version>
  <description>The obst_avoid_robot package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="thanos.m14@gmail.com">manolee</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

</package>
